# papr

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: ci.yml
app/: Cargo.toml  build.rs
app/data/: resources.gresource.xml
app/data/ui/: appwindow.ui  viewport.ui
app/src/: main.rs  types.rs
app/src/canvas/: layout.rs  mod.rs  pool.rs
app/src/canvas/render/: fallback.rs  manager.rs  mod.rs  scheme.rs  source.rs  tile.rs
app/src/canvas/tile/: cache.rs  fallback.rs  manager.rs  mod.rs  scheme.rs  source.rs
app/src/core/: mod.rs
app/src/core/render/: interop.rs  layout.rs  mod.rs  pdfium.rs
app/src/core/render/core/: common.rs  fallback.rs  manager.rs  mod.rs  source.rs  tile.rs
app/src/pdf/: document.rs  mod.rs
app/src/ui/: mod.rs
app/src/ui/app/: imp.rs  mod.rs
app/src/ui/appwindow/: imp.rs  mod.rs
app/src/ui/canvas/: imp.rs  mod.rs
app/src/ui/viewport/: imp.rs  mod.rs
app/src/utils/: bufpool.rs  linked_list.rs  mod.rs  ptr.rs
app/src/utils/exec/task/: mod.rs  raw.rs  state.rs  vtable.rs
executor/src/: exec.rs  lib.rs
executor/src/exec/: basic.rs  common.rs  mod.rs  priority.rs
executor/src/task/: api.rs  core.rs  harness.rs  mod.rs  raw.rs  vtable.rs
executor/src/utils/: linked_list.rs  mod.rs  ptr.rs  sync.rs
pdfium/: Cargo.toml
pdfium-sys/: Cargo.toml  build.rs  wrapper.h
pdfium-sys/src/: lib.rs
pdfium/examples/: metadata.rs  render_basic.rs  render_buffered.rs  render_progressive.rs
pdfium/src/: bindings.rs  bitmap.rs  document.rs  error.rs  fileaccess.rs  lib.rs  library.rs  metadata.rs  page.rs  types.rs  utils.rs  version.rs
pdfium/src/doc/: document.rs  metadata.rs  mod.rs  page.rs  pages.rs
pdfium/src/doc/page/: mod.rs  page.rs
pdfium/src/doc/page/render/: mod.rs  progressive.rs  types.rs
pdfium/src/io/: fileaccess.rs  mod.rs
pdfium/src/utils/: mod.rs  sync.rs  utf16le.rs
