[package]
edition = "2021"
name = "papr"
authors = ["Maximilian Luz <m@mxnluz.io>"]
version = "0.1.0"

[dependencies]
adw = {version = "0.3.1", package = "libadwaita", features = ["v1_2"]}
env_logger = "0.10.0"
gtk = {version = "0.6.2", package = "gtk4", features = ["xml_validation", "v4_8"]}
log = "0.4.17"
nalgebra = "0.32.2"
num-traits = "0.2.15"
pdfium = { path = "../pdfium" }

[build-dependencies]
glib-build-tools = "0.17.0"
