[package]
name = "pdfium-sys"
version = "0.1.0"       # chromium/5541
authors = ["Maximilian Luz <m@mxnluz.io>"]
edition = "2018"

[lib]
doctest = false

[features]
default = ["dylib-require-all"]
dylib-require-all = []
skia = []
v8 = []
xfa = ["v8"]

[build-dependencies]
bindgen = "0.64.0"

[dependencies]
libloading = "0.7.4"
