[package]
name = "pdfium"
version = "0.1.0"
authors = ["Maximilian Luz <m@mxnluz.io>"]
edition = "2021"

[features]
default = ["sync"]
sync = []

[dependencies]
bitflags = "2.0.1"
libloading = "0.7.4"
nalgebra = "0.32.2"
pdfium-sys = { path = "../pdfium-sys" }
simba = "0.8.0"
thiserror = "1.0.39"

[dev-dependencies]
image = "0.24.5"
